# StarTracker-Rustc

./: .env.sample  Cargo.toml  readme.md
migrations/2025-09-14-094722-0000_user_data/: down.sql  up.sql
migrations/2025-09-14-173954-0000_password_manager/: down.sql  up.sql
migrations/2025-09-15-062817-0000_remove_google_id_field/: down.sql  up.sql
migrations/2025-09-15-073304-0000_alter_uniques_user_table/: down.sql  up.sql
migrations/2025-09-15-084339-0000_alter_password_mng/: down.sql  up.sql
migrations/2025-09-15-124217-0000_alter_password_hash_fields/: down.sql  up.sql
migrations/2025-10-02-134935-0000_user_settings_create_table/: down.sql  up.sql
migrations/2025-10-03-050129-0000_add_additional_setting/: up.sql
migrations/2025-10-03-063233-0000_alter_addtional_settings_field_json/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/user_access_management/: get.rs  jwt.rs  mod.rs  post.rs  serializers.rs
src/user_access_management/__tests__/: jwt_test.rs  mod.rs
src/utils/: mod.rs
src/utils/cryptic_manager/: mod.rs  password_hasher.rs
src/utils/cryptic_manager/__tests__/: mod.rs  password_hasher_test.rs
src/utils/db_calls_manager/: db_utils.rs  mod.rs
tests/: login_password_hasher-test.rs  login_password_hasher_test.rs  mod.rs
