[package]
name = "star_tracker_rustc"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"

[dependencies]
actix-web = "4"
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
pq-sys = { version = "0.6", features = ["bundled"] }
openssl-sys = { version = "0.9.100", features = ["vendored"] } 
serde = { version = "1.0", features = ["derive"] }
argon2 = {version = "0.5.3", features = ["std"]}
subtle = "2.6.1"

[[bin]]
name = "star_tracker_rustc"
path = "src/main.rs"